--- a/StocksEnchange.API/StocksEnchange.API.csproj
+++ b/StocksEnchange.API/StocksEnchange.API.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\v1\" />
+    <Folder Include="Controllers\" />
   </ItemGroup>
 
 </Project>
