feat: update StocksController route, enhance logging, and improve StockService functionality

--- a/StocksEnchange.API/appsettings.Development.json
+++ b/StocksEnchange.API/appsettings.Development.json
@@ -2,7 +2,23 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information",
+      "Microsoft.AspNetCore.SignalR": "Debug",
+      "Microsoft.AspNetCore.Http.Connections": "Debug",
+      "StocksEnchange.API.Hubs": "Debug",
+      "StocksEnchange.API.Services": "Debug"
+    }
+  },
+  "AllowedHosts": "*",
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://localhost:5000"
+      },
+      "Https": {
+        "Url": "https://localhost:5001"
+      }
     }
   }
 }
