feat: Refactor logging and improve UI
- Replaced `ILogger` with `Serilog` in `StocksController`, `StockHub`, and `StockService`, centralizing logging configuration.
- Updated `Program.cs` settings to integrate Serilog and adjust Kestrel and CORS.
- Added new UI elements in `index.html` to enable data sorting, improving usability.
- Updated project dependencies, replacing `Swashbuckle.AspNetCore` with `Microsoft.AspNetCore.OpenApi` and adding Serilog packages.

--- a/StocksEnchange.API/Properties/launchSettings.json
+++ b/StocksEnchange.API/Properties/launchSettings.json
@@ -36,6 +36,16 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
+    },
+    "StocksEnchange.API": {
+      "commandName": "Project",
+      "dotnetRunMessages": true,
+      "launchBrowser": true,
+      "launchUrl": "",
+      "applicationUrl": "http://localhost:5000;https://localhost:5001",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
     }
   }
 }
