--- a/StocksEnchange.API/appsettings.json
+++ b/StocksEnchange.API/appsettings.json
@@ -5,5 +5,72 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://localhost:5000"
+      },
+      "Https": {
+        "Url": "https://localhost:5001"
+      }
+    }
+  },
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information"
+      }
+    },
+    "Enrich": [ 
+      "FromLogContext",
+      {
+        "Name": "WithProperty",
+        "Args": {
+          "propertyName": "Application",
+          "propertyValue": "StockExchangeAPI"
+        }
+      }
+    ],
+    "WriteTo": [
+      {
+        "Name": "Console"
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "logs/info_.log",
+          "rollingInterval": "Day",
+          "restrictedToMinimumLevel": "Information",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff} [{Level:u3}] {Message:lj}{NewLine}{Exception}",
+          "levelSwitch": {
+            "$switch": {
+              "Cases": [
+                {
+                  "level": "Error",
+                  "behavior": "Exclude"
+                },
+                {
+                  "level": "Fatal",
+                  "behavior": "Exclude"
+                }
+              ]
+            }
+          }
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "logs/error_.log",
+          "rollingInterval": "Day",
+          "restrictedToMinimumLevel": "Error",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss.fff} [{Level:u3}] {Message:lj}{NewLine}{Exception}"
+        }
+      }
+    ]
+  },
   "AllowedHosts": "*"
 }
